# nvisii-dataset

./: .gitignore  LICENSE  README.md  pyproject.toml  visualize_dataset.py
nvisii_dataset/: __init__.py  interface_nvisii.py  part_registry.py
tests/: test_smoke.py
