[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvisii-dataset"           # project name (hyphen OK here)
version = "1.4.0"
description = "NVISII utilities for synthetic data and pose/render workflows"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Kevin Murray" }]
dependencies = [
  "numpy==1.22",
  "opencv-python-headless",
  "trimesh",
  "pyyaml",
  "open3d",
  "pyrender"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[project.urls]
Homepage = "https://github.com/overlab-kevin/nvisii-dataset"
Issues = "https://github.com/overlab-kevin/nvisii-dataset/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nvisii_dataset*"]

